Update Promised Consort Arena Structures and Biome Tags
- Modified multiple NBT files for the Promised Consort arena structure, including root and section files, to enhance the arena design.
- Expanded biome tags for the Promised Consort arena to include additional biomes: badlands, eroded badlands, wooded badlands, savanna, savanna plateau, and windswept savanna.
- Adjusted structure generation parameters in the promised_consort_arena.json file, increasing max height difference and entry height difference, and added constraints for water depth and percentage.
- Updated structure set placement parameters to reduce spacing and separation for better structure distribution.